AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>