AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/Permit_No__c.field-meta.xml
<CustomField>
    <fullName>Permit_No__c</fullName>
    <label>Permit No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>