AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Status__c</fullName>
    <label>Purchase Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>