AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/QuickBooks_PO_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_PO_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks PO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>