AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/Quickbooks_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Vendor_Id__c</fullName>
    <formula>Vendor__r.faxa__QuickBooks_Vendor_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Vendor Id</label>
    <type>Text</type>
</CustomField>