AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To Purchase Orders</relationshipLabel>
    <relationshipName>Ship_To_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>