AirquipUAT/force-app/main/default/objects/Purchase_Order__c/fields/Sync_to_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to QuickBooks</label>
    <type>Checkbox</type>
</CustomField>